objects/Patch__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_Email__c</fullName>
        <formula>CSM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_Phone__c</fullName>
        <formula>CSM__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Patch_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catchall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catchall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCMM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCMM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Patches_FCMM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GDPR_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GDPR Country?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISR_Email__c</fullName>
        <formula>ISR__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISR Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR_Phone__c</fullName>
        <formula>ISR__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISR Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Patch_Assignments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsSalesTeam__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates patch will use Sales Team setting to assign team member instead of patch user settings.</inlineHelpText>
        <label>Sales Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overlay_1_Email__c</fullName>
        <formula>Overlay_1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overlay 1 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overlay_1_Phone__c</fullName>
        <formula>Overlay_1__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overlay 1 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overlay_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overlay 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Patches_O1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overlay_2_Email__c</fullName>
        <formula>Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overlay 2 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overlay_2_Phone__c</fullName>
        <formula>Overlay_2__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overlay 2 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overlay_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overlay 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Patches_O2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overlay__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If an overlay patch meets criteria, the patch is not assigned. Only the overlaying members are added to the team members</inlineHelpText>
        <label>Overlay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patch Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Patch_Assignments4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PatchRegion__c</fullName>
        <formula>TEXT(Owner__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patch Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatchTheatre__c</fullName>
        <formula>TEXT(Owner__r.GEO__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patch Theatre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patch_Name__c</fullName>
        <description>Name Identifer</description>
        <label>Patch Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patch_Owner_Email__c</fullName>
        <formula>Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patch Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patch_Owner_Phone__c</fullName>
        <formula>Owner__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patch Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessingSequence__c</fullName>
        <inlineHelpText>Smaller number gets higher priority</inlineHelpText>
        <label>Processing Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Email__c</fullName>
        <formula>RSM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Phone__c</fullName>
        <formula>RSM__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Patch_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Patch_Assignments7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rule_Logic__c</fullName>
        <inlineHelpText>A formula referencing the processing sequence of criteria rules, indicating the logic of how the rules to be evaluated. e.g. &quot;4&quot;, &quot;1 AND 2&quot;, &quot;2 AND (3 OR 4)&quot;, &quot;2 AND NOT (3 OR 4)&quot;</inlineHelpText>
        <label>Rule Logic</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Email__c</fullName>
        <formula>SE__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SE Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Phone__c</fullName>
        <formula>SE__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SE Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Patch_Assignments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The time this patch or rule/matchList gets updated or deleted</description>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Named Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEO Based</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Patch</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Patch Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>